--- a/styles/style.css
+++ b/styles/style.css
@@ -30,3 +30,10 @@ a{
     height: 30px;
     border-radius: 155px;
 }
+
+#modal-body img{
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    margin: 2rem 0;
+}
