--- a/styles/style.css
+++ b/styles/style.css
@@ -26,8 +26,8 @@ a{
 }
 
 .author-img img{
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     border-radius: 155px;
 }
 
@@ -36,4 +36,13 @@ a{
     height: 5rem;
     border-radius: 50%;
     margin: 2rem 0;
+}
+
+#form-select,
+#form-select:focus,
+#form-select option{
+    outline: none;
+    border: none;
+    padding: 5px 20px;
+    border-radius: 1rem;
 }
