--- a/styles/style.css
+++ b/styles/style.css
@@ -16,14 +16,20 @@ a{
     cursor: pointer;
 }
 
+#catagories-container div:nth-child(2){
+    flex-grow: 1;
+}
+#catagories-container div:nth-child(5){
+    flex-grow: 1;
+}
 #catagories-container div:nth-child(7){
-    flex-shrink: 0.7;
+    flex-shrink: 1;
 }
 #catagories-container div:nth-child(1){
-    flex-grow: 1.1;
+    flex-grow: 1;
 }
 #catagories-container div:nth-child(3){
-    flex-grow: 1.3;
+    flex-grow: 1;
 }
 
 
@@ -34,6 +40,14 @@ a{
 
 #catagories-items-container .card img{
     height: 100%;
+}
+
+.inner-row{
+    max-height: .5rem;
+}
+
+.author{
+    flex-grow: 1;
 }
 
 #data-not-found{
@@ -48,7 +62,7 @@ a{
 .author-img img{
     width: 25px;
     height: 25px;
-    border-radius: 155px;
+    border-radius: 50%;
 }
 
 #modal-body img{
