--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,12 @@ a{
     cursor: pointer;
 }
 
+#user{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+}
+
 #catagories-container div:nth-child(2){
     flex-grow: 1;
 }
